# studentrecords

./: README.md  app.py  pyproject.toml  render.yaml
static/: scripts.js  style.css
templates/: index.html
